# carcassonne

./: .gitignore  CMakeLists.txt  LICENSE  README.md  standard.org
doc/: standard.org
src/: Doxyfile  Makefile  ai.c  ai.h  board.c  board.h  calculator.c  calculator.h  default_tiles.txt  file.c  file.h  generator.c  interactive.c  interactive.h  logic.c  logic.h  main.c  misc.c  misc.h  move.c  move.h  point.c  point.h  side.c  side.h  tile.c  tile.h  tlist.c  tlist.h
